; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_stm32-dfsdm-adc.c_stm32_dfsdm_release_buff_cb.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_stm32-dfsdm-adc.c_stm32_dfsdm_release_buff_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dev = type { i32 }
%struct.stm32_dfsdm_adc = type { i32*, i32* }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @stm32_dfsdm_release_buff_cb(%struct.iio_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.iio_dev*, align 8
  %4 = alloca %struct.stm32_dfsdm_adc*, align 8
  store %struct.iio_dev* %0, %struct.iio_dev** %3, align 8
  %5 = load %struct.iio_dev*, %struct.iio_dev** %3, align 8
  %6 = icmp ne %struct.iio_dev* %5, null
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @EINVAL, align 4
  %9 = sub nsw i32 0, %8
  store i32 %9, i32* %2, align 4
  br label %17

10:                                               ; preds = %1
  %11 = load %struct.iio_dev*, %struct.iio_dev** %3, align 8
  %12 = call %struct.stm32_dfsdm_adc* @iio_priv(%struct.iio_dev* %11)
  store %struct.stm32_dfsdm_adc* %12, %struct.stm32_dfsdm_adc** %4, align 8
  %13 = load %struct.stm32_dfsdm_adc*, %struct.stm32_dfsdm_adc** %4, align 8
  %14 = getelementptr inbounds %struct.stm32_dfsdm_adc, %struct.stm32_dfsdm_adc* %13, i32 0, i32 1
  store i32* null, i32** %14, align 8
  %15 = load %struct.stm32_dfsdm_adc*, %struct.stm32_dfsdm_adc** %4, align 8
  %16 = getelementptr inbounds %struct.stm32_dfsdm_adc, %struct.stm32_dfsdm_adc* %15, i32 0, i32 0
  store i32* null, i32** %16, align 8
  store i32 0, i32* %2, align 4
  br label %17

17:                                               ; preds = %10, %7
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local %struct.stm32_dfsdm_adc* @iio_priv(%struct.iio_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
